Fix white-space nowrap of code in tables
Test Plan: hugo

Reviewers: karthik, sid

Reviewed By: sid

Subscribers: Yugaweb

Differential Revision: https://phabricator.dev.yugabyte.com/D3231

--- a/docs/static/css/yuga-overrides.css
+++ b/docs/static/css/yuga-overrides.css
@@ -285,6 +285,10 @@ a {
   padding-right: 4px;
 }
 
+table code {
+  white-space: nowrap;
+}
+
 @media screen and (max-width: 959px) {
   .mobile-only {
     display: inline-block;
